--- a/app/src/main/res/layout/content_anagrams.xml
+++ b/app/src/main/res/layout/content_anagrams.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     Copyright 2016 Google Inc.
 
     Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,52 +14,63 @@
     limitations under the License.
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:showIn="@layout/activity_anagrams" tools:context=".AnagramsActivity">
+    tools:context=".AnagramsActivity"
+    tools:showIn="@layout/activity_anagrams">
+
     <ScrollView
-        android:layout_height="match_parent"
-        android:layout_width="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
         <RelativeLayout
-            android:layout_height="match_parent"
-            android:layout_width="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:src="@drawable/logo" />
 
             <TextView
+                android:id="@+id/gameStatusView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Press 'play' to get started"
-                android:id="@+id/gameStatusView"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginTop="59dp" />
+                android:layout_marginTop="159dp"
+                android:text="Press 'play' to get started" />
 
             <EditText
+                android:id="@+id/editText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText"
-                android:maxLines="1"
-                android:imeOptions="actionGo"
-                android:enabled="false"
-                android:layout_below="@+id/gameStatusView"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/gameStatusView"
+                android:enabled="false"
+                android:imeOptions="actionGo"
+                android:maxLines="1" />
 
             <TextView
+                android:id="@+id/resultView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:id="@+id/resultView"
-                android:layout_below="@+id/editText"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/editText"
+                android:text="" />
         </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
